--- a/css/style.css
+++ b/css/style.css
@@ -243,18 +243,15 @@ nav {
     align-items: center;
     justify-content: center;
 }
-.social-media-icon:hover .sm-link {
-    background-color: var(--bright-color);
+.social-media-icon:hover, .social-media-icon:focus .sm-link {
+    background-color: var(--hover-color);
 }
 .sm-icon {
     width: 22px;
     height: 22px;
 }
-.social-media-icon:hover .sm-icon{
+.social-media-icon:hover, .social-media-icon:focus .sm-icon {
     fill: #FFFFFF;
-}
-.sm-icon-circle:hover .sm-icon {
-    fill:#2196F3;
 }
 .clients-section {
     margin: 0 auto;
@@ -272,12 +269,16 @@ nav {
 .clients {
     width: 170px;
     height: 92px;
-    border: 1px solid #AFB1B8;
+    border: 1px solid transparent;
+    background-color: rgba(255, 255, 255, 0.1);
     border-radius: 4%;
     padding: 16px 32px;
 }
+.clients:hover, .clients:focus .clinet {
+    background-color: var(--hover-color);
+}
 .clients:hover .client{
-    fill: #188CE8;
+    fill: var(--main-color);
 }
 .clients:not(:last-child) {
     margin-right: 30px;
