--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ nav {
 .client-link:hover .client,.client-link:focus .client  {
     fill: var(--bright-color);
 }
-.clients:hover, .clients:focus {
+.clients:hover {
     border-color: var(--bright-color);
 }
 footer {
