--- a/css/style.css
+++ b/css/style.css
@@ -96,13 +96,29 @@ nav {
 .menu-item:not(:last-child) {
     margin-right: 50px;
 }
-
+.menu-item {
+    display: flex;
+    align-items: center;
+}
+.phone-link {
+    min-width: 142px;
+}
+.icon-header {
+    fill: var(--text-color);
+    margin-right: 10px;
+}
+.menu-item:hover .icon-header, 
+.menu-item:focus .icon-header {
+    fill: var(--bright-color);
+}
 .hero { 
+    max-width: 1600px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 200px;
     padding-bottom: 200px;
+    margin: 0 auto;
 }
 .hero-heading {
     font-weight: 900;
@@ -283,6 +299,8 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 170px;
+    height: 92px;
 }
 .clients {
     width: 170px;
@@ -290,7 +308,6 @@ nav {
     border: 1px solid #AFB1B8;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 4%;
-    padding: 16px 32px;
 }
 
 .clients:not(:last-child) {
@@ -365,9 +382,10 @@ footer {
 .sm-link-footer:focus {
     background-color: var(--bright-color);
 }
-.sm-link-footer:hover .sm-icon,
-.sm-link-footer:focus .sm-icon {
+.sm-icon-footer {
     fill: var(--main-color);
+    width: 22px;
+    height: 22px;
 }
 .portfolio {
     display: flex;
@@ -400,6 +418,10 @@ header {
 .filter-button:hover, .filter-button:focus{
     color: var(--main-color);
     background-color: var(--bright-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 .portfolio-nav {
     display: flex;
@@ -408,6 +430,15 @@ header {
 }
 .gallery-images {
     margin-left: 0;
+    max-width: 370px;
+    box-sizing: border-box;
+}
+.gallery-images:hover, .gallery-images:focus {
+    background: var(--main-color);
+    border: 1px solid var(--img-border);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .gallery-border {
