--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,7 @@ header {
 }
 .portfolio-nav {
     display: flex;
-    gap: 30px;
+    gap: 25px;
     flex-wrap: wrap;
 }
 .gallery-images {
@@ -433,6 +433,7 @@ header {
     box-sizing: border-box;
 }
 .gallery-images:hover, .gallery-images:focus {
+    box-sizing: border-box;
     background: var(--main-color);
     border: 1px solid var(--img-border);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
@@ -441,8 +442,7 @@ header {
 }
 
 .gallery-border {
-    padding-top: 20px;
-    padding-left: 24px;
+    padding: 20px 24px;
     border: 1px solid var(--img-border);
     border-top: none;
 }
